--- a/app/assets/stylesheets/terms-privacy.css.sass
+++ b/app/assets/stylesheets/terms-privacy.css.sass
@@ -6,4 +6,22 @@ body.privacy
     margin-left: 30px
     li
       margin: 10px 0
-      list-style: circle      
+      list-style: circle    
+      
+      
+#update_notifications
+  overflow: hidden
+  width: 600px
+  margin: 0 auto
+  img.logo
+    width: 261px
+    margin: 0 200px
+      
+  .message
+    width: 200px
+    display: block
+    margin: 0 auto
+    p
+      text-align: center
+      line-height: 1.2em
+      font-size: 1.2em
